# ai-gm-assistant

./: .gitignore  AdversaryPageProposal.md  CLAUDE.md  CurrentState.md  README.md  SQLiteMigration.md  migrate_to_sqlite.py  patch_generator.py  patch_retry.py  patch_server.py  pyproject.toml  requirements.txt  run.py  service.ps1  test_db.py
.claude/: settings.local.json
.github/workflows/: ci.yml
installer/: ai-gm-assistant.spec  build.ps1  setup.iss
scratch/: list_models.py  test_image_gen.py
src/: __init__.py  gemini_client.py  generator.py  models.py  paths.py  pdf_builder.py  ruleset_manager.py  server.py  storage.py
static/: app.js  index.html  styles.css
static/js/: api.js  main.js  state.js  utils.js
static/js/components/: Sidebar.js
static/js/views/: Campaign.js  CampaignCRUD.js  CampaignGenerate.js  Chat.js  Dashboard.js  Settings.js
templates/: module.html
tests/: conftest.py  test_generator.py  test_models.py  test_server.py  test_storage.py
